--- a/app/src/main/res/layout/activity_dialog_user.xml
+++ b/app/src/main/res/layout/activity_dialog_user.xml
@@ -76,10 +76,11 @@
                                 android:src="@drawable/icon_money" />
 
                             <TextView
+                                android:id="@+id/txt_coin"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:text="123"
+                                android:text="0"
                                 android:textColor="#A76400"
                                 android:textSize="20dp" />
                         </LinearLayout>
