--- a/app/src/main/res/layout/actionbar_common.xml
+++ b/app/src/main/res/layout/actionbar_common.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
-    android:layout_marginTop="10dp"
-    android:gravity="center"
+    android:layout_marginTop="0dp"
     android:background="#000000"
+    android:gravity="center"
     android:orientation="horizontal">
 
     <ImageView
@@ -20,16 +20,16 @@
 
         <TextView
             android:id="@+id/tv_numberAnswer"
-            android:layout_marginLeft="10dp"
             android:layout_width="90dp"
             android:layout_height="40dp"
-            android:text="0"
-            android:paddingRight="20dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/avatar_icon"
             android:gravity="right|center"
+            android:paddingRight="20dp"
+            android:text="0"
             android:textColor="#FF9800"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:background="@drawable/avatar_icon" />
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="45dp"
@@ -51,6 +51,7 @@
         android:textColor="#FFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
+
     <TextView
         android:id="@+id/mTv_heart"
         android:layout_width="45dp"
@@ -61,19 +62,21 @@
         android:textColor="#FFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
+
     <ImageView
         android:id="@+id/iv_music"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:src="@drawable/bg_music"/>
+        android:src="@drawable/bg_music" />
+
     <TextView
         android:id="@+id/txt_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/coin_icon"
         android:gravity="center"
-        android:paddingTop="6dp"
         android:paddingLeft="20dp"
+        android:paddingTop="6dp"
         android:text="0"
         android:textColor="#FFF"
         android:textSize="20dp"
