--- a/app/src/main/res/layout/activity_dialog_exit.xml
+++ b/app/src/main/res/layout/activity_dialog_exit.xml
@@ -6,31 +6,31 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="307dp"
         android:layout_gravity="center">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="379dp"
+            android:layout_height="305dp"
             android:gravity="center"
             android:padding="20dp">
 
             <LinearLayout
-                android:layout_width="394dp"
+                android:layout_width="338dp"
                 android:layout_height="276dp"
                 android:background="@drawable/khunghelp"
                 android:orientation="vertical">
 
 
                 <LinearLayout
-                    android:layout_width="381dp"
-                    android:layout_height="260dp"
+                    android:layout_width="338dp"
+                    android:layout_height="263dp"
                     android:layout_margin="5dp"
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_width="322dp"
+                        android:layout_height="8dp"
                         android:layout_weight="2">
 
                         <TextView
@@ -44,8 +44,8 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="7dp"
+                        android:layout_width="339dp"
+                        android:layout_height="2dp"
                         android:layout_marginTop="0dp"
                         android:layout_weight="1.5"
                         android:gravity="center">
@@ -59,16 +59,17 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="331dp"
-                        android:layout_height="8dp"
+                        android:layout_width="285dp"
+                        android:layout_height="6dp"
                         android:layout_margin="20dp"
                         android:layout_weight="1.5"
                         android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/iv_yes"
-                            android:layout_width="174dp"
-                            android:layout_height="60dp"
+                            android:layout_width="130dp"
+                            android:layout_height="51dp"
+                            android:layout_marginLeft="5dp"
                             android:background="@drawable/nutxanh"
                             android:text="Thoát"
                             android:textColor="#FFFFFF"
@@ -76,8 +77,9 @@
 
                         <Button
                             android:id="@+id/iv_no"
-                            android:layout_width="157dp"
-                            android:layout_height="62dp"
+                            android:layout_width="136dp"
+                            android:layout_height="59dp"
+                            android:layout_marginLeft="10dp"
                             android:background="@drawable/nutxanh"
                             android:text="Đóng"
                             android:textColor="#FFFFFF"
