--- a/app/src/main/res/layout/activity_dialog_items.xml
+++ b/app/src/main/res/layout/activity_dialog_items.xml
@@ -6,18 +6,18 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="316dp"
         android:layout_gravity="center">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="338dp"
+            android:layout_width="wrap_content"
+            android:layout_height="318dp"
             android:gravity="center"
-            android:padding="20dp">
+            android:padding="0dp">
 
             <LinearLayout
-                android:layout_width="358dp"
-                android:layout_height="298dp"
+                android:layout_width="315dp"
+                android:layout_height="269dp"
                 android:background="@drawable/khunghelp"
                 android:orientation="vertical">
 
@@ -34,7 +34,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="305dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="25dp"
                             android:gravity="center"
@@ -52,8 +52,9 @@
 
                         <FrameLayout
                             android:id="@+id/fm_freeMoney_x3"
-                            android:layout_width="match_parent"
-                            android:layout_height="80dp"
+                            android:layout_width="277dp"
+                            android:layout_height="76dp"
+                            android:layout_marginLeft="10dp"
                             android:layout_marginTop="0dp"
                             android:background="@drawable/bong"
                             android:padding="20dp">
@@ -70,7 +71,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="+5 Free (AD)"
+                                android:text="       +5 Free (AD)"
                                 android:textColor="#FFFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -78,9 +79,9 @@
 
                         <FrameLayout
                             android:id="@+id/fm_freeMoney_x10"
-                            android:layout_width="match_parent"
-                            android:layout_height="80dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_width="274dp"
+                            android:layout_height="74dp"
+                            android:layout_marginLeft="10dp"
                             android:background="@drawable/bong"
                             android:padding="20dp">
 
@@ -96,7 +97,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="+10 Free (AD)"
+                                android:text="          +10 Free (AD)"
                                 android:textColor="#FFFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -114,8 +115,8 @@
 
         <ImageView
             android:id="@+id/iv_close"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
