--- a/app/src/main/res/layout/activity_dialog_support.xml
+++ b/app/src/main/res/layout/activity_dialog_support.xml
@@ -5,35 +5,35 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="387dp"
+        android:layout_height="439dp"
         android:layout_gravity="center">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="398dp"
+            android:layout_height="441dp"
             android:gravity="center"
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="303dp"
+                android:layout_height="397dp"
                 android:background="@drawable/khunghelp"
                 android:orientation="vertical">
 
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="300dp"
+                    android:layout_height="385dp"
 
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_marginTop="20dp"
-                        android:paddingBottom="0dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_marginTop="20dp"
+                        android:orientation="vertical"
+                        android:paddingBottom="0dp">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -54,8 +54,8 @@
 
                         <FrameLayout
                             android:id="@+id/fl_suppost_1"
-                            android:layout_width="304dp"
-                            android:layout_height="80dp"
+                            android:layout_width="236dp"
+                            android:layout_height="58dp"
                             android:layout_marginTop="0dp"
                             android:background="@drawable/bong">
 
@@ -71,7 +71,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="-5 Mở theo thứ tự"
+                                android:text="        -5 Mở theo thứ tự"
                                 android:textColor="#FFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -79,8 +79,8 @@
 
                         <FrameLayout
                             android:id="@+id/fl_suppost_2"
-                            android:layout_width="307dp"
-                            android:layout_height="80dp"
+                            android:layout_width="236dp"
+                            android:layout_height="55dp"
                             android:background="@drawable/bong">
 
                             <ImageView
@@ -95,7 +95,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="-5 Mở ngẫu nhiên"
+                                android:text="        -5 Mở ngẫu nhiên"
                                 android:textColor="#FFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -103,8 +103,8 @@
 
                         <FrameLayout
                             android:id="@+id/fl_suppost_3"
-                            android:layout_width="305dp"
-                            android:layout_height="80dp"
+                            android:layout_width="236dp"
+                            android:layout_height="54dp"
                             android:background="@drawable/bong">
 
                             <ImageView
@@ -119,7 +119,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="-5 Mở gợi ý           "
+                                android:text="       -5 Mở gợi ý           "
                                 android:textColor="#FFFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -127,8 +127,8 @@
 
                         <FrameLayout
                             android:id="@+id/fl_suppost_4"
-                            android:layout_width="305dp"
-                            android:layout_height="80dp"
+                            android:layout_width="236dp"
+                            android:layout_height="53dp"
                             android:background="@drawable/bong">
 
                             <ImageView
@@ -139,11 +139,11 @@
                                 android:src="@drawable/icon_money" />
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="243dp"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="-20 Xóa ký tự sai"
+                                android:text="       -20 Xóa ký tự sai"
                                 android:textColor="#FFFF"
                                 android:textSize="20dp"
                                 android:textStyle="bold" />
@@ -151,16 +151,17 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/iv_close"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="0dp"
+                android:layout_marginRight="0dp"
+                android:src="@drawable/close_button" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/iv_close"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/close_button" />
     </FrameLayout>
 
 </FrameLayout>
