--- a/app/src/main/res/layout/activity_dialog_user.xml
+++ b/app/src/main/res/layout/activity_dialog_user.xml
@@ -35,7 +35,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
                         android:layout_weight="1.5"
                         android:gravity="center">
@@ -55,18 +55,19 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="319dp"
-                        android:layout_height="86dp"
+                        android:layout_width="280dp"
+                        android:layout_height="87dp"
                         android:layout_margin="20dp"
                         android:layout_weight="1.5"
                         android:background="@drawable/border_dialog_acount">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="85dp"
+                            android:layout_width="267dp"
+                            android:layout_height="73dp"
                             android:layout_gravity="center"
                             android:layout_weight="1"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:paddingRight="0dp">
 
                             <ImageView
                                 android:layout_width="50dp"
@@ -86,8 +87,8 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="84dp"
+                            android:layout_width="290dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -100,6 +101,7 @@
                                 android:src="@drawable/heart" />
 
                             <TextView
+                                android:id="@+id/tv_tim"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
