--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -12,18 +12,18 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="174dp"
-        android:layout_height="205dp"
-        android:layout_marginBottom="48dp"
-        android:src="@drawable/xb"
+        android:layout_width="144dp"
+        android:layout_height="176dp"
         android:rotation="45"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        android:src="@drawable/xb"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="parent"></ImageView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"></ImageView>
 
     <ImageView
-        android:layout_width="400dp"
-        android:layout_height="0dp"
+        android:id="@+id/imageView6"
+        android:layout_width="359dp"
+        android:layout_height="259dp"
         android:src="@drawable/ht"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,24 +31,25 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="276dp"
-        android:layout_height="279dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="176dp"
+        android:layout_height="204dp"
+        android:layout_marginBottom="48dp"
         android:alpha="0.55"
         android:src="@drawable/chu"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="69dp"
+        android:layout_height="78dp"
 
+        android:indeterminate="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
