--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,15 +9,25 @@
     tools:context=".MainActivity">
 
     <include
+        android:id="@+id/include"
         layout="@layout/actionbar_common"
         android:layout_width="match_parent"
-        android:layout_height="72dp" />
+        android:layout_height="wrap_content"
+        ads:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintHorizontal_bias="0.0"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center">
+        android:id="@+id/frameLayout"
+        android:layout_width="375dp"
+        android:layout_height="185dp"
+        android:gravity="center"
+        ads:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/include">
 
         <ImageView
             android:id="@+id/iv_picture"
@@ -31,18 +41,24 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:src="@drawable/anhboder" />
+
     </FrameLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="412dp"
+        android:id="@+id/linearLayout2"
+        android:layout_width="396dp"
+        android:layout_height="121dp"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        ads:layout_constraintBottom_toTopOf="@+id/btn_tiep"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
         <LinearLayout
             android:id="@+id/anwser0"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="375dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1.25"
             android:gravity="center"
             android:orientation="horizontal">
@@ -58,15 +74,16 @@
 
         <LinearLayout
             android:id="@+id/anwser"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="344dp"
+            android:layout_height="58dp"
             android:layout_weight="2.4"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/anwser1"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="44dp"
+                android:layout_marginLeft="20dp"
                 android:layout_weight="1.2"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -77,7 +94,8 @@
             <LinearLayout
                 android:id="@+id/anwser2"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="39dp"
+                android:layout_marginLeft="20dp"
                 android:layout_weight="1.2"
                 android:gravity="center|top"
                 android:orientation="horizontal" />
@@ -85,50 +103,61 @@
         </LinearLayout>
 
 
-        <Button
-            android:id="@+id/btn_tiep"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@drawable/nutxanh"
-            android:text="Bỏ qua"
-            android:textColor="#FFF"
-            android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="372dp"
+        android:layout_height="208dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/te"
+        android:gravity="center"
+        android:orientation="vertical"
+        ads:layout_constraintBottom_toBottomOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/btn_tiep">
 
         <LinearLayout
+            android:id="@+id/plan1"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:background="@drawable/te"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:id="@+id/plan1"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="15dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
+            android:orientation="horizontal">
 
 
-            </LinearLayout>
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/plan2"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
+        <LinearLayout
+            android:id="@+id/plan2"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-
-            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_tiep"
+        android:layout_width="105dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="@drawable/nutxanh"
+        android:text="Bỏ qua"
+        android:textColor="#FFF"
+        android:visibility="visible"
+        ads:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        ads:layout_constraintEnd_toEndOf="parent"
+        ads:layout_constraintHorizontal_bias="0.534"
+        ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
