--- a/app/src/main/res/layout/activity_dialog_answer.xml
+++ b/app/src/main/res/layout/activity_dialog_answer.xml
@@ -56,6 +56,7 @@
                             android:src="@drawable/heart" />
 
                         <TextView
+                            android:id="@+id/tv_timm"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="x 2"
