--- a/app/src/main/res/layout/actionbar_common.xml
+++ b/app/src/main/res/layout/actionbar_common.xml
@@ -22,7 +22,8 @@
             android:id="@+id/tv_numberAnswer"
             android:layout_width="90dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/avatar_icon"
             android:gravity="right|center"
             android:paddingRight="20dp"
@@ -34,7 +35,9 @@
         <ImageView
             android:layout_width="58dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="2dp"
             android:src="@drawable/button_user_press" />
 
@@ -54,8 +57,8 @@
 
     <TextView
         android:id="@+id/mTv_heart"
-        android:layout_width="43dp"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="43dp"
         android:background="@drawable/heart_click"
         android:gravity="center"
         android:text="0"
@@ -65,14 +68,14 @@
 
     <ImageView
         android:id="@+id/iv_music"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
         android:src="@drawable/bg_music" />
 
     <TextView
         android:id="@+id/txt_point"
-        android:layout_width="93dp"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
         android:background="@drawable/coin_icon"
         android:gravity="center"
         android:paddingLeft="20dp"
